--- a/20170519/mission/김동욱프로젝트/devPro/views_file/email.jade
+++ b/20170519/mission/김동욱프로젝트/devPro/views_file/email.jade
@@ -1,22 +1,16 @@
-DOCTYPE html
-  html
-    head
-      meta(charset='utf-8')
-    div(style='width:40%;')
-      form(action='send_email', method='post')
-        div
-          span
-            from
-          input(type='text' name='sender' placeholder='from')
-        div
-          span
-            to
-          input(type='text' name='receiver' placeholder='to')
-        div
-          span
-            제목
-          input(type='text' name='subject' placeholder='제목')
-        div
-          textarea(name='description' placeholder='내용')
-        div
-          input(type='submit' value='보내기')
+doctype html
+html
+  head
+    meta(charset='utf-8')
+  div(style='width:40%;')
+    form(action='send_email', method='post')
+      div 보내는사람
+        input(type='text' name='sender' value='kdwman3477@gmail.com')
+      div 받는사람
+        input(type='text' name='receiver')
+      div 제목
+        input(type='text' name='subject')
+      div 내용
+        textarea(name='description' placeholder='내용')
+      div
+        input(type='submit' value='보내기')
